package it.robot.grpc;

message Empty{}

message RobotPresentation {

  required string id = 1;
  required string address = 2;
  required int32 port = 3;
  required Position position = 4;
}

message RobotResponse {
  required string id = 1;
}

message Position {
  required int32 x = 1;
  required int32 y = 2;
}

message RobotExitRequest {
  required string id = 1;
}

message RobotExitResponse {
  required string id = 1;
}

message MechanicAccessRequest{
  required string id = 1;
  required int64 timestamp = 2;
}

message MechanicAccessResponse{
  required string ack = 1;
}

message HeartbeatResponse {
  required string id = 1;
}

service RobotService{
  rpc presentation(RobotPresentation) returns (RobotResponse);
  rpc notifyExit(RobotExitRequest) returns (RobotExitResponse);
  rpc accessToMechanic(MechanicAccessRequest) returns (MechanicAccessResponse);
  rpc heartbeatService(Empty) returns (HeartbeatResponse);
}


